格式规范；结构优化调整；自动配置